# seg2map

./: .gitignore  LICENSE  MANIFEST.in  README.md  app.ipynb  app2.ipynb  async_10_download_approach.py  final_download__jupyter.py  final_download_approach.py  gdal_retile.py  new_download_approach.py  pyproject.toml  requirements.txt  requirements_dev.txt  roi_func.py  run_roi_func.py  seg2map.ipynb  temp.py  test_models.py  unet.ipynb  unzipper.py
.github/workflows/: pip_install_e.yml  pypi_publish.yml  test_coastseg.yml
ci/envs/: 39-coastseg.yaml
src/seg2map/: common.py  download_manager.py  downloads.py  exception_handler.py  exceptions.py  factory.py  map_UI.py  map_functions.py  map_interface.py  model_functions.py  models_UI.py  new_download_codes.py  new_downloads.py  new_zoo_model.py  ortho_codes.py  refactor_downloads.py  roi.py  sessions.py  zoo_model.py
src/seg2map/NAIP/: carmel.geojson  example_dl_naip_ts_from_geojson.py  example_multiROI.geojson  example_singleROI.geojson  hidden_beach.geojson  multi_sites_tests.geojson
